Feat: Add users controller